# xuiua

./: .gitignore  LICENSE  README.md  notebook.py  pyproject.toml
tests/: test_add_shapes.py  test_compile.py  test_dialect.py  test_parser.py
tests/filecheck/: add.ua  arrays.ua  dialect.mlir  duplicate.ua  identity.ua  lit.cfg
tests/filecheck/parsing/: add.ua  empty.ua  empty_binding.ua  examples.ua  numbers.ua  parens.ua  sum.ua
tests/filecheck/passes/: add_shapes.mlir  empty.mlir  infer_shapes.mlir  remove-casts.mlir
tests/filecheck/primitives/: add.ua  binding.ua  empty.ua  identity.ua  multiply.ua  reduce.ua
xuiua/: ast.py  compile.py  dialect.py  ir_gen.py  main.py  parser.py  printer.py  shape_inference_patterns.py
xuiua/frontend/: ast.py  ir_gen.py  parser.py
xuiua/passes/: __init__.py  add_shapes.py  convert_uiua_to_stablehlo.py  remove_casts.py
