[tool.poetry]
name = "xuiua"
version = "0.1.0"
description = "A uiua compiler written in Python"
authors = ["Sasha Lopoukhine <sasha@lopoukhine.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
xuiua = "xuiua.main:main"

[tool.poetry.dependencies]
python = "^3.11"
xdsl = { git = "https://github.com/xdslproject/xdsl.git", rev = "main", extras = [
    "jax",
] }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
filecheckize = "^0.1"
lit = "^18.1.8"
filecheck = "^1.0.0"
basedpyright = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests/*test_*.py"]
python_classes = "Test_*"
python_functions = "test_*"
addopts = ["--durations=20", "--maxfail=5"]
